[tool.poetry]
name = "hetzner-invoice"
version = "0.1.0"
description = "Automatically download and transform Hetzner invoices."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.3"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pytest = "^5.3"
pytest-cov = "^2.8"
cafeteria = "^0.19.0"
pre-commit = "^1.20"
flake8 = "^3.7"
mysql-connector-python = "^8.0"
sqlalchemy = "^1.3"
pymysql = "^0.9.3"
alembic = "^1.4"
pyotp = "^2.3"
bs4 = "^0.0.1"
codecov = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
